# ros_astra_camera

./: CMakeLists.txt  package.xml
config/: astra.yaml
include/astra_camera/: astra_device.h  astra_driver.h  ros12_shim.h
launch/: astra_launch.py
ros/: astra_camera_node.cpp
src/: astra_device_manager.cpp  astra_driver.cpp  astra_frame_listener.cpp
test/: test_wrapper.cpp
